# GMTK2024

./: .gitignore  LICENSE  README.md
godot/: export_presets.cfg  icon.svg.import  project.godot  rust.gdextension  second.tscn  test.tscn
godot/levels/: level1.tscn  level2.tscn  level3.tscn  level4.tscn  level5.tscn  level6.tscn
godot/scenes/: MainMenu.tscn  credits.tscn  door.tscn  graph.tscn  key.tscn  killplane.tscn  player.tscn
godot/scenes/minigames/: bar_controller.tscn  signing.tscn
godot/textures/: background.png.import  convention.jpg.import  graph.jpg.import  graph_credits.jpg.import  key.png.import  title.png.import
godot/textures/door/: door1.png.import  door2.png.import
godot/textures/player/: guy1.png.import  guy2.png.import  guy_jump.png.import
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/classes/: door.rs  main_menu.rs  minigame.rs  mod.rs  player.rs
rust/src/classes/graphs/: bar.rs  mod.rs
